--- a/index.html
+++ b/index.html
@@ -40,8 +40,152 @@
                 </select>
                 <button>Search</button>
             </div>
-
         </section>
+    </div>
+
+    <div id="main2">
+        <div id="box1">
+            <div id="explore">
+                <h1>Explore All Vehicles</h1>
+            </div>
+
+            <div id="view">
+                <a href="#">View All</a>
+            </div>
+        </div>
+
+        <div id="box2">
+            <div class="car-card">
+                <div class="car-image">
+                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                        alt="">
+                    <span class="badge">Excellent Choice</span>
+                    <!-- <button class="fav"></button> -->
+                </div>
+
+                <div class="car-details">
+                    <h3>Mercedes-Benz, C Class</h3>
+                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                    <div class="car-info">
+                        <div><i>⛽</i> 72,925 miles</div>
+                        <div><i>⚙️</i> Petrol</div>
+                        <div><i>🚗</i> Automatic</div>
+                    </div>
+
+                    <div class="price">
+                        <span class="old">$789</span>
+                        <span class="new">$399</span>
+                        <a href="#">View Details →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car-card">
+                <div class="car-image">
+                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                        alt="">
+                    <span class="badge">Excellent Choice</span>
+                    <!-- <button class="fav"></button> -->
+                </div>
+
+                <div class="car-details">
+                    <h3>Mercedes-Benz, C Class</h3>
+                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                    <div class="car-info">
+                        <div><i>⛽</i> 72,925 miles</div>
+                        <div><i>⚙️</i> Petrol</div>
+                        <div><i>🚗</i> Automatic</div>
+                    </div>
+
+                    <div class="price">
+                        <span class="old">$789</span>
+                        <span class="new">$399</span>
+                        <a href="#">View Details →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car-card">
+                <div class="car-image">
+                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                        alt="">
+                    <span class="badge">Excellent Choice</span>
+                    <!-- <button class="fav"></button> -->
+                </div>
+
+                <div class="car-details">
+                    <h3>Mercedes-Benz, C Class</h3>
+                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                    <div class="car-info">
+                        <div><i>⛽</i> 72,925 miles</div>
+                        <div><i>⚙️</i> Petrol</div>
+                        <div><i>🚗</i> Automatic</div>
+                    </div>
+
+                    <div class="price">
+                        <span class="old">$789</span>
+                        <span class="new">$399</span>
+                        <a href="#">View Details →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car-card">
+                <div class="car-image">
+                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                        alt="">
+                    <span class="badge">Excellent Choice</span>
+                    <!-- <button class="fav"></button> -->
+                </div>
+
+                <div class="car-details">
+                    <h3>Mercedes-Benz, C Class</h3>
+                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                    <div class="car-info">
+                        <div><i>⛽</i> 72,925 miles</div>
+                        <div><i>⚙️</i> Petrol</div>
+                        <div><i>🚗</i> Automatic</div>
+                    </div>
+
+                    <div class="price">
+                        <span class="old">$789</span>
+                        <span class="new">$399</span>
+                        <a href="#">View Details →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car-card">
+                <div class="car-image">
+                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                        alt="">
+                    <span class="badge">Excellent Choice</span>
+                    <!-- <button class="fav"></button> -->
+                </div>
+
+                <div class="car-details">
+                    <h3>Mercedes-Benz, C Class</h3>
+                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                    <div class="car-info">
+                        <div><i>⛽</i> 72,925 miles</div>
+                        <div><i>⚙️</i> Petrol</div>
+                        <div><i>🚗</i> Automatic</div>
+                    </div>
+
+                    <div class="price">
+                        <span class="old">$789</span>
+                        <span class="new">$399</span>
+                        <a href="#">View Details →</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </body>
