--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -43,151 +44,231 @@
         </section>
     </div>
 
-    <div id="main2">
-        <div id="box1">
-            <div id="explore">
-                <h1>Explore All Vehicles</h1>
+    <div class="section-wrapper">
+        <div id="main2">
+            <div id="box1">
+                <div id="explore">
+                    <h1>Explore All Vehicles</h1>
+                </div>
+
+                <div id="view">
+                    <a href="#">View All</a>
+                </div>
             </div>
 
-            <div id="view">
-                <a href="#">View All</a>
+            <div id="box2">
+                <div class="car-card">
+                    <div class="car-image">
+                        <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                            alt="">
+                        <span class="badge">Excellent Choice</span>
+                        <!-- <button class="fav"></button> -->
+                    </div>
+
+                    <div class="car-details">
+                        <h3>Mercedes-Benz, C Class</h3>
+                        <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                        <div class="car-info">
+                            <div><i>⛽</i> 72,925 miles</div>
+                            <div><i>⚙️</i> Petrol</div>
+                            <div><i>🚗</i> Automatic</div>
+                        </div>
+
+                        <div class="price">
+                            <span class="old">$789</span>
+                            <span class="new">$399</span>
+                            <a href="#">View Details →</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="car-card">
+                    <div class="car-image">
+                        <img src="https://images.unsplash.com/photo-1739644247038-adf09eccffe4?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                            alt="">
+                        <span class="badge">Excellent Choice</span>
+                        <!-- <button class="fav"></button> -->
+                    </div>
+
+                    <div class="car-details">
+                        <h3>Mercedes-Benz, C Class</h3>
+                        <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                        <div class="car-info">
+                            <div><i>⛽</i> 72,925 miles</div>
+                            <div><i>⚙️</i> Petrol</div>
+                            <div><i>🚗</i> Automatic</div>
+                        </div>
+
+                        <div class="price">
+                            <span class="old">$789</span>
+                            <span class="new">$399</span>
+                            <a href="#">View Details →</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="car-card">
+                    <div class="car-image">
+                        <img src="https://images.unsplash.com/photo-1700393879677-663e8475bf70?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687"
+                            alt="">
+                        <span class="badge">Excellent Choice</span>
+                        <!-- <button class="fav"></button> -->
+                    </div>
+
+                    <div class="car-details">
+                        <h3>Mercedes-Benz, C Class</h3>
+                        <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                        <div class="car-info">
+                            <div><i>⛽</i> 72,925 miles</div>
+                            <div><i>⚙️</i> Petrol</div>
+                            <div><i>🚗</i> Automatic</div>
+                        </div>
+
+                        <div class="price">
+                            <span class="old">$789</span>
+                            <span class="new">$399</span>
+                            <a href="#">View Details →</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="car-card">
+                    <div class="car-image">
+                        <img src="https://images.unsplash.com/photo-1661162094890-e5eca69354f0?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=764"
+                            alt="">
+                        <span class="badge">Excellent Choice</span>
+                        <!-- <button class="fav"></button> -->
+                    </div>
+
+                    <div class="car-details">
+                        <h3>Mercedes-Benz, C Class</h3>
+                        <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                        <div class="car-info">
+                            <div><i>⛽</i> 72,925 miles</div>
+                            <div><i>⚙️</i> Petrol</div>
+                            <div><i>🚗</i> Automatic</div>
+                        </div>
+
+                        <div class="price">
+                            <span class="old">$789</span>
+                            <span class="new">$399</span>
+                            <a href="#">View Details →</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="car-card">
+                    <div class="car-image">
+                        <img src="https://images.unsplash.com/photo-1563262717-d8880b4fc64f?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
+                            alt="">
+                        <span class="badge">Excellent Choice</span>
+                        <!-- <button class="fav"></button> -->
+                    </div>
+
+                    <div class="car-details">
+                        <h3>Mercedes-Benz, C Class</h3>
+                        <p>2023 C300e AMG Line Night Ed Premium Plus</p>
+
+                        <div class="car-info">
+                            <div><i>⛽</i> 72,925 miles</div>
+                            <div><i>⚙️</i> Petrol</div>
+                            <div><i>🚗</i> Automatic</div>
+                        </div>
+
+                        <div class="price">
+                            <span class="old">$789</span>
+                            <span class="new">$399</span>
+                            <a href="#">View Details →</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="box3">
+                <div id="left">
+                    <!-- <img src="https://creativelayers.net/themes/boxcar-html/images/resource/pricing1-1.jpg" alt=""> -->
+                </div>
+                <div id="right">
+                    <h1>Unleash The Road, Your Next Journey Starts Here.</h1>
+                    <div id="content">
+                        <p>We are committed to providing our customers with exceptional service</p>
+                        <div id="list">
+                            <p><i class="ri-check-double-fill"></i>A small team with a big passion for great rides.</p>
+                            <p><i class="ri-check-double-fill"></i>Every car is maintained with care so you can drive
+                                worry-free.</p>
+                            <p><i class="ri-check-double-fill"></i>Fair rates, flexible plans, and reliable service
+                                that’s
+                                our promise.</p>
+                            <button id="btn2">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="box4">
+                <h1>Why Choose Us?</h1>
+            </div>
+
+            <div id="box5">
+                <div class="card1">
+                    <i class="ri-wallet-line"></i>
+                    <h3>Special Finacning Offers</h3>
+                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                </div>
+                <div class="card1">
+                    <i class="ri-diamond-line"></i>
+                    <h3>Trusted Car Dealership</h3>
+                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                </div>
+                <div class="card1">
+                    <i class="ri-money-rupee-circle-line"></i>
+                    <h3>Transparent Pricing</h3>
+                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                </div>
+                <div class="card1">
+                    <i class="ri-car-washing-line"></i>
+                    <h3>Expert Car Service</h3>
+                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                </div>
+            </div>
+
+            <div id="box6">
+                <h1>What Customers Say About Us? </h1>
+            </div>
+
+            <div id="box7">
+                <!-- <div class="review-active">
+                    <p>"Excellent service! The car was spotless and smooth to drive."</p>
+                    <h4>- AAAAAAA</h4>
+                </div> -->
+
+                <div class="review">
+                    <p>"Really impressed with the quick booking and customer support!"</p>
+                    <h4>- Arjit</h4>
+                </div>
+                <div class="review">
+                    <p>"Affordable rates and amazing car quality. Will book again!"</p>
+                    <h4>- Mahendar</h4>
+                </div>
+                <div class="review">
+                    <p>"The process was seamless. Highly recommend BoxCars!"</p>
+                    <h4>- Roan </h4>
+                </div>
             </div>
         </div>
-
-        <div id="box2">
-            <div class="car-card">
-                <div class="car-image">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
-                        alt="">
-                    <span class="badge">Excellent Choice</span>
-                    <!-- <button class="fav"></button> -->
-                </div>
-
-                <div class="car-details">
-                    <h3>Mercedes-Benz, C Class</h3>
-                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
-
-                    <div class="car-info">
-                        <div><i>⛽</i> 72,925 miles</div>
-                        <div><i>⚙️</i> Petrol</div>
-                        <div><i>🚗</i> Automatic</div>
-                    </div>
-
-                    <div class="price">
-                        <span class="old">$789</span>
-                        <span class="new">$399</span>
-                        <a href="#">View Details →</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="car-image">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
-                        alt="">
-                    <span class="badge">Excellent Choice</span>
-                    <!-- <button class="fav"></button> -->
-                </div>
-
-                <div class="car-details">
-                    <h3>Mercedes-Benz, C Class</h3>
-                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
-
-                    <div class="car-info">
-                        <div><i>⛽</i> 72,925 miles</div>
-                        <div><i>⚙️</i> Petrol</div>
-                        <div><i>🚗</i> Automatic</div>
-                    </div>
-
-                    <div class="price">
-                        <span class="old">$789</span>
-                        <span class="new">$399</span>
-                        <a href="#">View Details →</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="car-image">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
-                        alt="">
-                    <span class="badge">Excellent Choice</span>
-                    <!-- <button class="fav"></button> -->
-                </div>
-
-                <div class="car-details">
-                    <h3>Mercedes-Benz, C Class</h3>
-                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
-
-                    <div class="car-info">
-                        <div><i>⛽</i> 72,925 miles</div>
-                        <div><i>⚙️</i> Petrol</div>
-                        <div><i>🚗</i> Automatic</div>
-                    </div>
-
-                    <div class="price">
-                        <span class="old">$789</span>
-                        <span class="new">$399</span>
-                        <a href="#">View Details →</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="car-image">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
-                        alt="">
-                    <span class="badge">Excellent Choice</span>
-                    <!-- <button class="fav"></button> -->
-                </div>
-
-                <div class="car-details">
-                    <h3>Mercedes-Benz, C Class</h3>
-                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
-
-                    <div class="car-info">
-                        <div><i>⛽</i> 72,925 miles</div>
-                        <div><i>⚙️</i> Petrol</div>
-                        <div><i>🚗</i> Automatic</div>
-                    </div>
-
-                    <div class="price">
-                        <span class="old">$789</span>
-                        <span class="new">$399</span>
-                        <a href="#">View Details →</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="car-image">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"
-                        alt="">
-                    <span class="badge">Excellent Choice</span>
-                    <!-- <button class="fav"></button> -->
-                </div>
-
-                <div class="car-details">
-                    <h3>Mercedes-Benz, C Class</h3>
-                    <p>2023 C300e AMG Line Night Ed Premium Plus</p>
-
-                    <div class="car-info">
-                        <div><i>⛽</i> 72,925 miles</div>
-                        <div><i>⚙️</i> Petrol</div>
-                        <div><i>🚗</i> Automatic</div>
-                    </div>
-
-                    <div class="price">
-                        <span class="old">$789</span>
-                        <span class="new">$399</span>
-                        <a href="#">View Details →</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
     </div>
+
+    <div id="main3">
+        <div id="left">
+            <video src="./Logo.webm" autoplay muted loop width="740"></video>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
