--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Blog</a>
                 <a href="#">Shop</a>
                 <a href="#">Contact</a>
-                <a href="#">Sign In</a>
+                <a id="signInLink" href="">Sign In</a>
                 <button id="btn1">ADD LISTING </button>
             </div>
         </nav>
@@ -217,22 +217,26 @@
                 <div class="card1">
                     <i class="ri-wallet-line"></i>
                     <h3>Special Finacning Offers</h3>
-                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.
+                    </p>
                 </div>
                 <div class="card1">
                     <i class="ri-diamond-line"></i>
                     <h3>Trusted Car Dealership</h3>
-                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.
+                    </p>
                 </div>
                 <div class="card1">
                     <i class="ri-money-rupee-circle-line"></i>
                     <h3>Transparent Pricing</h3>
-                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.
+                    </p>
                 </div>
                 <div class="card1">
                     <i class="ri-car-washing-line"></i>
                     <h3>Expert Car Service</h3>
-                     <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.</p>
+                    <p>Our stress-free finance department <br> that can find financial solutions to <br> save you money.
+                    </p>
                 </div>
             </div>
 
@@ -265,6 +269,29 @@
     <div id="main3">
         <div id="left">
             <video src="./Logo.webm" autoplay muted loop width="740"></video>
+        </div>
+    </div>
+
+    <div id="loginBox" class="modal">
+        <div id="content1">
+            <span class="close">&times</span>
+            <div id="left">
+                <img src="https://images.unsplash.com/photo-1608506436795-af65d01305bf?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=880" alt="">
+            </div>
+            <div id="right1">
+                <h2>Drive Luxury</h2>
+                <p>Welcome to your account</p>
+                <form>
+                    <input type="email" placeholder="Enter your mail" required>
+                    <input type="password" placeholder="Enter your password" required>
+                    <button type="submit">CONTINUE</button>
+                    <div class="options">
+                        <label><input type="checkbox">Remember me</label>
+                        <a href="#">Forgot Passowrd</a>
+                    </div>
+                    <p>Dont have an account? <a href="#">Sign Up</a></p>
+                </form>
+            </div>
         </div>
     </div>
 
