--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div id="content">
                 <a href="#">Home</a>
                 <!-- <a href="#">Inventory</a> -->
-                <a href="#">Blog</a>
-                <a href="#">Shop</a>
-                <a href="#">Contact</a>
+                <!-- <a href="#">Blog</a> -->
+                <a href="shop.html">Shop</a>
+                <a id="contactBtn" href="#">Contact</a>
                 <a id="signInLink" href="">Sign In</a>
                 <button id="btn1">ADD LISTING </button>
             </div>
@@ -276,7 +276,8 @@
         <div id="content1">
             <span class="close">&times</span>
             <div id="left">
-                <img src="https://images.unsplash.com/photo-1608506436795-af65d01305bf?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=880" alt="">
+                <img src="https://images.unsplash.com/photo-1608506436795-af65d01305bf?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=880"
+                    alt="">
             </div>
             <div id="right1">
                 <h2>Drive Luxury</h2>
@@ -290,6 +291,46 @@
                         <a href="#">Forgot Passowrd</a>
                     </div>
                     <p>Dont have an account? <a href="#">Sign Up</a></p>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="ContactPage">
+        <div id="content2">
+            <span class="close">&times</span>
+            <div id="leftBox">
+                <h3>WE'RE HERE TO HELP YOU</h3>
+                <h1>
+                    <span style="font-weight: 700;">Discuss</span>
+                    <span style="font-weight: 100;">Your <br> Vehicle Needs?</span>
+                </h1>
+
+                <p>Looking for the best rental solutions? Reach out to us.</p>
+
+                <p><strong>Email:</strong> boxcars@gmail.com</p>
+                <p><strong>Phone:</strong> +91 00000 00000</p>
+            </div>
+            <div id="rightBox">
+                <form>
+                    <label>Name</label>
+                    <input type="text" placeholder="Enter Name:" required>
+                    <label>Email</label>
+                    <input type="email" placeholder="Enter your mail" required>
+
+                    <label>Industry</label>
+                    <select>
+                        <option>Select Industry</option>
+                        <option>Travel</option>
+                        <option>Business</option>
+                        <option>Leisure</option>
+                    </select>
+
+                    <label>Message</label>
+                    <textarea placeholder="Enter your Message">Send Message</textarea>
+
+                    <button type="submit">Send Message</button>
                 </form>
             </div>
         </div>
